# birkin-agent

./: .gitattributes  .gitignore  AGENTS.md  MANIFEST.in  README.md  SOUL.md  TOOLS.md  WORKSPACE_SUMMARY.md  birkin.json  pyproject.toml
docs/: architecture.md  auth-api-gateway.md  dashboard.md  hermes-skill-map.md  macos.md  memory-ledger-telegram.md  model-selection.md  openclaw-skill-map.md  reference-notes.md  runtime-approval-morpheus.md  setup-chat-skills.md  verified-learning-reliability.md
reviews/: 2026-05-27-auth-api-gateway-review.md  2026-05-27-code-review.md  2026-05-27-hermes-skills-readme-review.md  2026-05-27-model-selection-review.md  2026-05-27-readme-openclaw-reflection-review.md  2026-05-27-setup-chat-skills-review.md  2026-05-28-full-structure-agent-review.md  2026-05-28-installer-chat-ux-review.md  2026-05-28-lite-cli-packet-review.md  2026-05-28-lite-mode-review.md  2026-05-28-memory-ledger-onboarding-review.md  2026-05-28-runtime-approval-morpheus-review.md  2026-05-28-skills-display-review.md  2026-05-28-startup-slash-skills-review.md  2026-05-28-update-command-review.md  2026-05-28-verified-learning-reliability-review.md  2026-05-29-review-finding-fixes-review.md
scripts/: birkin-codex  birkin-codex.ps1  install.ps1  install.sh  setup  setup.ps1
skills/upstream/: manifest.json
src/birkin_agent/: __init__.py  agents.py  api.py  approvals.py  auth.py  chat.py  cli.py  dashboard.py  defaults.py  experience.py  gateway.py  improve.py  learning.py  ledger.py  memory.py  models.py  (+15 more)
tests/: test_birkin.py
tools/: sync_upstream_skills.py
(+240 files in other folders)
